# Loja

./: .dockerignore  .env  Dockerfile  README.md  database.db  docker-compose.yml  index.html  main.py  models.py  pyproject.toml  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 2454e19b8bbd_adicionar_campo_openpix_app_id_em_user.py  2485d36aba56_adicionar_on_delete_cascade_na_chave_.py  3a1678d18e4c_create_user_table.py  5fe78a0272e6_create_all_tables.py  6a68003b4926_create_all_tables.py  a202c5abb739_adicionar_user_id_na_tabela_products.py  b34ba3f496a5_initial_migration.py  b55fc634ec57_create_user_table.py  b8d23cd75e79_create_sales_and_sale_items_tables.py
routers/: auth.py  products.py  sales.py  users.py
static/: api.js  style.css
templates/: accounting.html  create_product.html  delete_product.html  home.html  login.html  products.html  register.html  sales.html  update_product.html
tests/: conftest.py  test_Security.py  test_app.py  test_auth.py  test_users.py
